--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 
-<div id="map" style="width: 100%; height: 500px"></div>
+<div id="cluster-map"></div>
 
 <h1>All Campgrounds</h1>
 <div>
@@ -16,6 +16,7 @@
                 class="img-fluid"
                 src="<%= campground.images[0].url %>"
                 alt=""
+                crossorigin=""
             />
             <% } %>
         </div>
