--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -7,7 +7,7 @@
             <div class="carousel-inner">
                 <% campground.images.forEach((img, i) => { %>
                 <div class="carousel-item <%= i === 0 ? "active" : "" %>">
-                    <img src="<%= img.url %>" class="d-block w-100" alt="" />
+                    <img src="<%= img.url %>" class="d-block w-100" alt="" crossorigin=""/>
                 </div>
                 <% }) %>
             </div>
@@ -74,7 +74,7 @@
         </div>
     </div>
     <div class="col-6">
-        <div id="map" style="width: 100%; height: 300px;"></div>
+        <div id="map"></div>
         <% if (currentUser) {%>
         <h2>Leave a Review</h2>
         <form
