--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,66 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home</title>
+        <title>YelpCamp</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="/stylesheets/home.css" />
     </head>
-    <body>
-        <h1>HOME!</h1>
+    <body class="d-flex text-white text-center bg-dark">
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <header class="mb-auto">
+                <h3 class="float-md-start mb-0">YelpCamp</h3>
+                <nav
+                    class="nav nav-masthead justify-content-center float-md-end"
+                >
+                    <a class="nav-link active" aria-current="page" href="#"
+                        >Home</a
+                    >
+                    <a class="nav-link" aria-current="page" href="/campgrounds"
+                        >Campgrounds</a
+                    >
+                    <% if (!currentUser) { %>
+                    <a class="nav-link" aria-current="page" href="/login"
+                        >Login</a
+                    >
+                    <a class="nav-link" aria-current="page" href="/register"
+                        >Register</a
+                    >
+                    <% } else { %>
+                    <a class="nav-link" aria-current="page" href="/logout"
+                        >Logout</a
+                    >
+                    <% } %>
+                </nav>
+            </header>
+
+            <main class="px-3">
+                <h1>YelpCamp</h1>
+                <p class="lead">
+                    Welcome to YelpCamp! <br />
+                    Jump right in and explore our many campgrounds. <br />
+                    Feel free to share some of your own and comment on others!
+                </p>
+                <a
+                    href="/campgrounds"
+                    class="btn btn-lg btn-secondary fw-bold bg-white"
+                    >View Campgrounds</a
+                >
+            </main>
+
+            <footer class="mt-auto text-white-50">
+                <p>&copy; 2023 YelpCamp</p>
+            </footer>
+        </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
