--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,11 +12,14 @@
             crossorigin="anonymous"
         />
 
-        <script src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js"></script>
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js" crossorigin=""></script>
         <link
             href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css"
             rel="stylesheet"
+            crossorigin=""
         />
+
+        <link rel="stylesheet" href="/stylesheets/app.css" crossorigin=""/>
     </head>
     <body class="d-flex flex-column vh-100">
         <%- include(`../partials/navbar`) %>
