--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/campgrounds">Home</a>
+                <a class="nav-item nav-link" href="/">Home</a>
                 <a class="nav-item nav-link" href="/campgrounds">Campgrounds</a>
                 <a class="nav-item nav-link" href="/campgrounds/new"
                     >New Campground</a
