--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,39 +1,67 @@
 <% layout("layouts/boilerplate") %>
 
-<h1>Register</h1>
-<form action="/register" method="POST" class="validate-form" novalidate>
-    <div class="mb-3">
-        <label class="form-label" for="username">Username</label>
-        <input
-            class="form-control"
-            type="text"
-            name="username"
-            id="username"
-            required
-        />
-        <div class="valid-feedback">Looks good!</div>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="row flex-fill">
+        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+            <div class="card shadow">
+                <img
+                    src="https://unsplash.com/photos/mXvCGhfgkMU/download?ixid=MnwxMjA3fDB8MXxhbGx8fHx8fHx8fHwxNjc4OTI2MzYw&force=true&w=1920"
+                    alt=""
+                    class="card-img-top"
+                    crossorigin=""
+                />
+                <div class="card-body">
+                    <h5 class="card-title">Register</h5>
+                    <form
+                        action="/register"
+                        method="POST"
+                        class="validate-form"
+                        novalidate
+                    >
+                        <div class="mb-3">
+                            <label class="form-label" for="username"
+                                >Username</label
+                            >
+                            <input
+                                class="form-control"
+                                type="text"
+                                name="username"
+                                id="username"
+                                required
+                                autofocus
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="email">Email</label>
+                            <input
+                                class="form-control"
+                                type="email"
+                                name="email"
+                                id="email"
+                                required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label" for="password"
+                                >Password</label
+                            >
+                            <input
+                                class="form-control"
+                                type="password"
+                                name="password"
+                                id="password"
+                                required
+                            />
+                            <div class="valid-feedback">Looks good!</div>
+                        </div>
+                        <div class="d-grid">
+                            <button class="btn btn-success">Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label class="form-label" for="email">Email</label>
-        <input
-            class="form-control"
-            type="email"
-            name="email"
-            id="email"
-            required
-        />
-        <div class="valid-feedback">Looks good!</div>
-    </div>
-    <div class="mb-3">
-        <label class="form-label" for="password">Password</label>
-        <input
-            class="form-control"
-            type="password"
-            name="password"
-            id="password"
-            required
-        />
-        <div class="valid-feedback">Looks good!</div>
-    </div>
-    <button class="btn btn-success">Register</button>
-</form>
+</div>
